--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -52,7 +52,8 @@ form.nochrome {
 }
 
 .nochrome #global-data-parameters,
-.nochrome #lens-data-parameters {
+.nochrome #lens-data-parameters,
+.nochrome #export-btn {
   display: none;
 }
 
