Hide unknown cells in some cases

--- a/app/views/data_explorer/dimensional/results/table/_10_group_headers.html.erb
+++ b/app/views/data_explorer/dimensional/results/table/_10_group_headers.html.erb
@@ -16,5 +16,7 @@
     </th>
   <% end %>
 
-  <th colspan="<%= @composition.metrics.size %>">UNKNOWN</th>
+  <% if @composition.metrics.any? { |m| @composition.results.get_value(m, nil, nil) } %>
+    <th colspan="<%= @composition.metrics.size %>">UNKNOWN</th>
+  <% end %>
 </tr>
