--- a/app/views/data_explorer/dimensional/results/table/_30_overall_and_group_2_totals_row.html.erb
+++ b/app/views/data_explorer/dimensional/results/table/_30_overall_and_group_2_totals_row.html.erb
@@ -36,16 +36,18 @@
     <% end %>
   <% end %>
 
-  <% @composition.metrics.each do |metric| %>
-    <% if !@composition.groups[1] || @composition.groups[1]&.summable?(metric) %>
-      <% total = @composition.results.get_total(metric, @composition.groups[1], nil) %>
-      <td><%= number_with_delimiter total %></td>
-    <% else %>
-      <td
-        <%= html_attributes(title: "When grouping by #{@composition.groups[1]&.dimension}, a total for #{metric.metric} is not displayed. Adding up the #{metric.metric} value for each group does not yield a statistically meaningful number. You should avoid adding these numbers together yourself, as the result likely won't mean what you're expecting.") %>>
+  <% if @composition.metrics.any? { |m| @composition.results.get_value(m, nil, nil) } %>
+    <% @composition.metrics.each do |metric| %>
+      <% if !@composition.groups[1] || @composition.groups[1]&.summable?(metric) %>
+        <% total = @composition.results.get_total(metric, @composition.groups[1], nil) %>
+        <td><%= number_with_delimiter total %></td>
+      <% else %>
+        <td
+          <%= html_attributes(title: "When grouping by #{@composition.groups[1]&.dimension}, a total for #{metric.metric} is not displayed. Adding up the #{metric.metric} value for each group does not yield a statistically meaningful number. You should avoid adding these numbers together yourself, as the result likely won't mean what you're expecting.") %>>
 
-        n/a
-      </td>
+          n/a
+        </td>
+      <% end %>
     <% end %>
   <% end %>
 </tr>
