Reorganize time series results view files

--- a/app/views/data_explorer/time_series/results/table/_10_granularity_headers.html.erb
+++ b/app/views/data_explorer/time_series/results/table/_10_granularity_headers.html.erb
@@ -1,6 +1,6 @@
 <tr>
   <td></td>
-  <td></td>
+  <% if @composition.groups.size > 1 %><td></td><% end %>
 
   <%# A cell for each granularity period, spanning all metrics and comparisons %>
   <% @composition.results.granularity_unique_members.each do |member| %>
