--- a/app/views/data_explorer/time_series/results/table/_20_metric_headers.html.erb
+++ b/app/views/data_explorer/time_series/results/table/_20_metric_headers.html.erb
@@ -1,6 +1,6 @@
 <tr>
   <td></td>
-  <td></td>
+  <% if @composition.groups.size > 1 %><td></td><% end %>
 
   <% @composition.results.granularity_unique_members.each do |_| %>
     <% @composition.metrics.each do |metric| %>
