--- a/app/views/data_explorer/_filter_chooser.html.erb
+++ b/app/views/data_explorer/_filter_chooser.html.erb
@@ -19,8 +19,8 @@
       <option value="exclude" <%= html_attributes(selected: "selected") if filter&.operator == :exclude %>>Exclude</option>
     </select>
 
-    <% if ["Token", "String"].include? dimension_def["Type"] %>
       <% if Lists.list_for(dim_key, current_user) %>
+    <% if ["Token"].include? dimension_def["Type"] %>
         <br>
         <label for="filter.<%= dim_key %>.values">Values:</label>
         <select class="value <%= "field_with_errors" if filter&.errors&.include?(:values) %>" <%= html_attributes(name: "filter.#{dim_key}.values", id: "filter.#{dim_key}.values") %> multiple>
