Fix column display with single group

--- a/app/views/data_explorer/dimensional/results/table/_20_metric_headers.html.erb
+++ b/app/views/data_explorer/dimensional/results/table/_20_metric_headers.html.erb
@@ -19,7 +19,7 @@
   <% end %>
 
   <%# Unknown group 2 %>
-  <% if @composition.metrics.any? { |m| @composition.results.get_value(m, nil, nil) } %>
+  <% if if @composition.groups.size < 2 || @composition.metrics.any? { |m| @composition.results.get_value(m, nil, nil) } %>
     <% @composition.metrics.each do |metric| %>
       <th><%= metric.metric %></th>
     <% end %>
