--- a/app/views/data_explorer/index.html.erb
+++ b/app/views/data_explorer/index.html.erb
@@ -1,7 +1,9 @@
 <%= form_with model: @composition, url: "/", method: :get, id: "data-explorer", data: { controller: "data-explorer--composition-url data-explorer--results-table-highlight data-explorer--chrome", action: "data-explorer--composition-url#goto keydown.meta+enter@document->data-explorer--composition-url#goto keydown.esc@document->data-explorer--chrome#toggle", "data-explorer--chrome-target": "root" } do |form| %>
   <div id="global-data-parameters">
-    <p><a href="/">Home</a></p>
+    <p><a href="/">Home</a> | <a href="/admin">Admin</a></p>
     <p><a href="/data-explorer"><%= current_user_name %></a></p>
+
+    <p>Last 48 hours: <%= number_to_human_size(@bytes) %> (<%= number_to_currency(@bytes.to_f / 2.0**40) %>)</p>
 
     <%= render "data_explorer/composition_errors" if @composition.invalid? %>
     <%= render "data_explorer/composition_warnings" if @composition.unsafe? %>
