--- a/app/views/data_explorer/dimensional/results/table/_10_group_headers.html.erb
+++ b/app/views/data_explorer/dimensional/results/table/_10_group_headers.html.erb
@@ -1,12 +1,12 @@
 <tr>
   <td></td>
 
-  <% if @composition.groups.size > 1 %>
+  <% if @tbl_show_group_1_totals %>
     <th <%= html_attributes(colspan: @composition.metrics.size) %> scope="colgroup">TOTAL</th>
   <% end %>
 
   <%# A cell for each metric, for each member of group 2 %>
-  <% @composition.results.group_2_unique_members&.each do |group_2_member| %>
+  <% @group_2_unique_members&.each do |group_2_member| %>
     <th
       <%= html_attributes(colspan: @composition.metrics.size) %>
       <%= html_attributes("data-raw-member": group_2_member) %>>
@@ -16,7 +16,7 @@
     </th>
   <% end %>
 
-  <% if @composition.metrics.any? { |m| @composition.results.get_value(m, nil, nil) } %>
+  <% if @tbl_show_group_2_unknowns %>
     <th colspan="<%= @composition.metrics.size %>">UNKNOWN</th>
   <% end %>
 </tr>
