--- a/app/views/data_explorer/dimensional/results/table/_50_no_group_row.html.erb
+++ b/app/views/data_explorer/dimensional/results/table/_50_no_group_row.html.erb
@@ -1,41 +1,42 @@
-<% if @composition.metrics.any? { |m| @composition.results.get_value(m, nil, nil) } %>
-  <tr>
-    <%# First cell in the row is a header with the group member name, which in %>
-    <%# this case is UNKNOWN (or something like that). %>
-    <%# When no groups are selected, there's only a single value for each metric %>
-    <%# in the results, and they aren't associated with any members, so they  %>
-    <%# are all essentially "unknown", and there's no need to show the label. %>
-    <% if @composition.groups.size > 0 %>
-      <th scope="row">UNKNOWN</th>
-    <% end %>
 
-    <% if @composition.groups.size > 1 %>
-      <% @composition.metrics.each do |metric| %>
-        <% if @composition.groups[0]&.summable?(metric) %>
-          <% total = @composition.results.get_total(metric, @composition.groups[0], nil) %>
-          <td><%= number_with_delimiter total %></td>
-        <% else %>
-          <td <%= html_attributes(title: "When grouping by #{@composition.groups[0]&.dimension}, a total for #{metric.metric} is not displayed. Adding up the #{metric.metric} value for each group does not yield a statistically meaningful number. You should avoid adding these numbers together yourself, as the result likely won't mean what you're expecting.") %>>
-            n/a
-          </td>
-        <% end %>
-      <% end %>
-    <% end %>
+<tr>
+  <%# First cell in the row is a header with the group member name, which in %>
+  <%# this case is UNKNOWN (or something like that). %>
+  <%# When no groups are selected, there's only a single value for each metric %>
+  <%# in the results, and they aren't associated with any members, so they  %>
+  <%# are all essentially "unknown", and there's no need to show the label. %>
+  <% if @tbl_show_group_1_headers %>
+    <th scope="row">UNKNOWN</th>
+  <% end %>
 
-    <%# A cell for each metric, for each member of group 2 %>
-    <% @composition.results.group_2_unique_members&.each do |group_2_member| %>
-      <% @composition.metrics.each do |metric| %>
-        <% value = @composition.results.get_value(metric, nil, group_2_member) %>
-
-        <td
-          <%= html_attributes("data-highlight-metric": metric.metric, "data-highlight-group-1": "__nil__", "data-highlight-group-2": group_2_member) %>
-          <%= html_attributes("data-raw-value": value) %>>
-          <%= number_with_delimiter(value) %>
+  <% if @tbl_show_group_1_totals %>
+    <% @composition.metrics.each do |metric| %>
+      <% if @composition.groups[0]&.summable?(metric) %>
+        <% total = @composition.results.get_total(metric, @composition.groups[0], nil) %>
+        <td><%= number_with_delimiter total %></td>
+      <% else %>
+        <td <%= html_attributes(title: "When grouping by #{@composition.groups[0]&.dimension}, a total for #{metric.metric} is not displayed. Adding up the #{metric.metric} value for each group does not yield a statistically meaningful number. You should avoid adding these numbers together yourself, as the result likely won't mean what you're expecting.") %>>
+          n/a
         </td>
       <% end %>
     <% end %>
+  <% end %>
 
-    <%# A cell for each metric, where both group 1 and group 2 are null %>
+  <%# A cell for each metric, for each member of group 2 %>
+  <% @group_2_unique_members&.each do |group_2_member| %>
+    <% @composition.metrics.each do |metric| %>
+      <% value = @composition.results.get_value(metric, nil, group_2_member) %>
+
+      <td
+        <%= html_attributes("data-highlight-metric": metric.metric, "data-highlight-group-1": "__nil__", "data-highlight-group-2": group_2_member) %>
+        <%= html_attributes("data-raw-value": value) %>>
+        <%= number_with_delimiter(value) %>
+      </td>
+    <% end %>
+  <% end %>
+
+  <%# A cell for each metric, where both group 1 and group 2 are null %>
+  <% if @tbl_show_group_2_unknowns %>
     <% @composition.metrics.each do |metric| %>
       <% value = @composition.results.get_value(metric, nil, nil) %>
 
@@ -45,5 +46,5 @@
         <%= number_with_delimiter(value) %>
       </td>
     <% end %>
-  </tr>
-<% end %>
+  <% end %>
+</tr>
